Implementación de servicios y exposición de rest point
Se finaliza la implementación de los servicios, se realiza la creación
de pruebas unitarias y se construye servicio rest, para exponer la
funcionalidad.